custom cursor SVG, more debugging options

--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
 <div class="anaMenu" style="background: rgb(80, 40, 124); height: 20px;"></div>
 
 
-<script type="text/javascript" src="assets/js/main.js" ></script>
+<script type="text/javascript" src="assets/js/rcmenu.js" ></script>
+<script type="text/javascript" src="assets/js/ccursor.js" ></script>
+   
